# modal-rs

./: .gitignore  .gitmodules  ARCHITECTURE.md  Cargo.toml  FEATURES.json  PROGRESS.md  README.md  agent_prompt.md  run_dev.bash  run_yolo_modal.py  sandbox_config.json  test_support.py
modal/: Cargo.toml
modal/examples/: cls_call.rs  cls_call_with_options.rs  custom_client.rs  function_call.rs  function_current_stats.rs  function_spawn.rs  image_building.rs  sandbox.rs  sandbox_agent.rs  sandbox_cloud_bucket.rs  sandbox_connect_token.rs  sandbox_directory_snapshot.rs  sandbox_exec.rs  sandbox_filesystem.rs  sandbox_filesystem_snapshot.rs  sandbox_gpu.rs  sandbox_named.rs  sandbox_poll.rs  sandbox_prewarm.rs  sandbox_private_image.rs  sandbox_proxy.rs  sandbox_secrets.rs  sandbox_tunnels.rs  sandbox_volume.rs  sandbox_volume_ephemeral.rs  telemetry.rs
modal/src/: app.rs  auth_token_manager.rs  client.rs  cloud_bucket_mount.rs  cls.rs  config.rs  ephemeral.rs  error.rs  function.rs  function_call.rs  grpc_mock.rs  image.rs  interceptors.rs  invocation.rs  lib.rs  logger.rs  pickle.rs  proxy.rs  queue.rs  retries.rs  sandbox.rs  sandbox_filesystem.rs  secret.rs  serialization.rs  task_command_router.rs  transport.rs  volume.rs
modal/tests/: app_test.rs  auth_token_manager_test.rs  client_test.rs  cloud_bucket_mount_test.rs  cls_test.rs  cls_with_options_test.rs  config_test.rs  function_call_test.rs  function_test.rs  grpc_test.rs  image_test.rs  logger_test.rs  proxy_test.rs  queue_test.rs  retries_test.rs  sandbox_directory_snapshot_test.rs  sandbox_filesystem_test.rs  (+6 more)
(+4 files in other folders)
