[package]
name = "modal"
version = "0.1.0"
edition = "2021"

[features]
integration = []

[dependencies]
modal-proto = { path = "../modal-proto" }
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
base64 = "0.22"
tower = { version = "0.5", features = ["util"] }
http = "1"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
dirs = "6"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
